--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.1",
+    "@angular/cdk": "^12.2.2",
     "@angular/common": "^12.1.0",
     "@angular/compiler": "^12.1.0",
     "@angular/core": "^12.1.0",
