--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,9 @@
     ]
   },
   "projects": {
+    "app-demo-simple": {
+      "tags": []
+    },
     "data-access-json": {
       "tags": []
     },
