--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,125 @@
 {
   "version": 1,
   "projects": {
+    "app-demo-advanced": {
+      "projectType": "application",
+      "root": "apps/app-demo-advanced",
+      "sourceRoot": "apps/app-demo-advanced/src",
+      "prefix": "eyassu-ng",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/app-demo-advanced",
+            "index": "apps/app-demo-advanced/src/index.html",
+            "main": "apps/app-demo-advanced/src/main.ts",
+            "polyfills": "apps/app-demo-advanced/src/polyfills.ts",
+            "tsConfig": "apps/app-demo-advanced/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "apps/app-demo-advanced/src/favicon.ico",
+              "apps/app-demo-advanced/src/assets"
+            ],
+            "styles": ["apps/app-demo-advanced/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/app-demo-advanced/src/environments/environment.ts",
+                  "with": "apps/app-demo-advanced/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "app-demo-advanced:build:production"
+            },
+            "development": {
+              "browserTarget": "app-demo-advanced:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "app-demo-advanced:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/app-demo-advanced/src/**/*.ts",
+              "apps/app-demo-advanced/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/app-demo-advanced"],
+          "options": {
+            "jestConfig": "apps/app-demo-advanced/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "app-demo-advanced-e2e": {
+      "root": "apps/app-demo-advanced-e2e",
+      "sourceRoot": "apps/app-demo-advanced-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/app-demo-advanced-e2e/cypress.json",
+            "tsConfig": "apps/app-demo-advanced-e2e/tsconfig.e2e.json",
+            "devServerTarget": "app-demo-advanced:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "app-demo-advanced:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/app-demo-advanced-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
     "app-demo-simple": {
       "projectType": "application",
       "root": "apps/app-demo-simple",
