--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser": "^12.1.0",
     "@angular/platform-browser-dynamic": "^12.1.0",
     "@angular/router": "^12.1.0",
+    "@ngxs/store": "^3.7.2",
     "@nrwl/angular": "12.7.2",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
@@ -58,6 +59,7 @@
     "@angular/cli": "~12.1.0",
     "@angular/compiler-cli": "^12.1.0",
     "@angular/language-service": "^12.1.0",
+    "@ngxs/devtools-plugin": "^3.7.2",
     "@nrwl/cli": "12.7.2",
     "@nrwl/cypress": "12.7.2",
     "@nrwl/eslint-plugin-nx": "12.7.2",
