--- a/package.json
+++ b/package.json
@@ -65,8 +65,13 @@
     "@nrwl/eslint-plugin-nx": "12.7.2",
     "@nrwl/jest": "12.7.2",
     "@nrwl/linter": "12.7.2",
+    "@nrwl/storybook": "12.7.2",
     "@nrwl/tao": "12.7.2",
     "@nrwl/workspace": "12.7.2",
+    "@storybook/addon-essentials": "~6.3.0",
+    "@storybook/angular": "~6.3.0",
+    "@storybook/builder-webpack5": "~6.3.0",
+    "@storybook/manager-webpack5": "~6.3.0",
     "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
